--- a/Rest/.classpath
+++ b/Rest/.classpath
@@ -87,5 +87,9 @@
 	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="lib/iText-2.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.0.8-bin.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-async-4.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-core-4.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-media-support-4.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-stream-4.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
