--- a/Rest/webapp/WEB-INF/jdbc.properties
+++ b/Rest/webapp/WEB-INF/jdbc.properties
@@ -22,7 +22,7 @@ hibernate.show_sql=true
 #jdbc.password=REST_SAMPLE
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://vps145779.ovh.net:3306/TEST?zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://vps145779.ovh.net:3306/GetSocial?zeroDateTimeBehavior=convertToNull
 jdbc.username=bartosz
 jdbc.password=bartosz
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
