Repaired mistake in jdbc.properties

--- a/Rest/src/com/capgemini/rest/client/jdbc.properties
+++ b/Rest/src/com/capgemini/rest/client/jdbc.properties
@@ -24,7 +24,7 @@ hibernate.show_sql=true
 
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://vps145779.ovh.net:3306/TEST?zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://vps145779.ovh.net:3306/GetSocial?zeroDateTimeBehavior=convertToNull
 jdbc.username=bartosz
 jdbc.password=bartosz
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
