Campaign form validation. Added page displays with twitter statistics.

--- a/Rest/src/ValidationMessages.properties
+++ b/Rest/src/ValidationMessages.properties
@@ -1,3 +1,10 @@
 search.incorrectTitle=wrong {incorrectTitle} title
 search.my.incorrectTitle=invalid title {incorrectTitle} in form
 AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or password
+camp.err.name=Name field is required!
+camp.err.desc=Description should have less than 500 letters!
+camp.err.startDate=Start date is required!
+camp.err.endDate=End date is required!
+camp.err.startDateFuture=Start date should be equal or greater than today.
+camp.err.endDateFuture=End date should be equal or greater than today.
+camp.s.err.campId=Campaign is required!
