Few changes for messages. Still not complete

--- a/Rest/src/ValidationMessages.properties
+++ b/Rest/src/ValidationMessages.properties
@@ -8,3 +8,6 @@ camp.err.endDate=End date is required!
 camp.err.startDateFuture=Start date should be equal or greater than today.
 camp.err.endDateFuture=End date should be equal or greater than today.
 camp.s.err.campId=Campaign is required!
+mess.err.selectCampaign=Please select campaign!
+mess.err.selectStep=Please select step!
+mess.err.textSize=To big content for twitter!
