Added user registration. But gui is needed

--- a/Rest/src/ValidationMessages.properties
+++ b/Rest/src/ValidationMessages.properties
@@ -11,3 +11,18 @@ camp.s.err.campId=Campaign is required!
 mess.err.selectCampaign=Please select campaign!
 mess.err.selectStep=Please select step!
 mess.err.textSize=To big content for twitter!
+reg.err.usernamepattern=User name can contain only lower case, upper case and digits.
+reg.err.usernamesize=User name should contain at least 6 and be shorter than 45 letters.
+reg.err.usernameempty=User name must be set.
+reg.err.passempty=Password must be set.
+reg.err.passsize=Password should contain at least 8 characters.
+reg.err.firstnameempty=First name should not be empty.
+reg.err.lastnameempty=Last name should not be empty.
+reg.err.emailpattern=Invalid email.
+reg.err.emailempty=Email must be set.
+reg.err.phonepattern=Invalid phone format. Phone format: ddd-ddd-ddd.
+reg.err.phoneempty=Phone must be set.
+reg.err.lastnamesize=Last name can contain only 30 letters.
+reg.err.lastnamesize=First name can contain only 30 letters.
+reg.err.groupnameempty=Group name must be set.
+reg.err.groupnamesize=Group name can contain only 500 characters.
