Changes in design.

--- a/Rest/src/ValidationMessages.properties
+++ b/Rest/src/ValidationMessages.properties
@@ -11,6 +11,7 @@ camp.s.err.campId=Campaign is required!
 mess.err.selectCampaign=Please select campaign!
 mess.err.selectStep=Please select step!
 mess.err.textSize=To big content for twitter!
+mess.err.null=Wrong date format!
 reg.err.usernamepattern=User name can contain only lower case, upper case and digits.
 reg.err.usernamesize=User name should contain at least 6 and be shorter than 45 letters.
 reg.err.usernameempty=User name must be set.
